src/test/ui/attributes/unix_sigpipe/unix_sigpipe-struct.stderr
error: `unix_sigpipe` attribute can only be used on `fn main()`
  --> $DIR/unix_sigpipe-struct.rs:3:1
   |
LL | #[unix_sigpipe = "inherit"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

