src/test/ui/attributes/unix_sigpipe/unix_sigpipe-struct.rs
#![feature(unix_sigpipe)]

#[unix_sigpipe = "inherit"] //~ error: `unix_sigpipe` attribute can only be used on `fn main()`
struct S;

fn main() {}
